--- a/App18.Material/Views/PageHome.xaml
+++ b/App18.Material/Views/PageHome.xaml
@@ -9,7 +9,7 @@
              xmlns:views="clr-namespace:App18.Material.Views"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:PageHomeViewModel, IsDesignTimeCreatable=True}"
-             Background="{DynamicResource PrimaryHueLightBrush}"
+             Background="{DynamicResource MaterialDesign.Brush.Primary.Light}"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.Resources>
         <cv:DateToHumanizeConverter x:Key="DateToHumanizeConverter" />
@@ -28,7 +28,7 @@
             </Grid.RowDefinitions>
 
             <!-- 关键词 -->
-            <Border Background="{DynamicResource MaterialDesignPaper}"
+            <Border Background="{DynamicResource MaterialDesign.Brush.Background}"
                     HorizontalAlignment="Left" Margin="0,16,0,8"
                     Width="310" Height="48" CornerRadius="24"
                     Grid.Row="0">
@@ -77,7 +77,7 @@
                                         <Border Margin="0,12,0,0" CornerRadius="4">
                                             <Grid>
                                                 <Border x:Name="PART_Back" Opacity="0.6" CornerRadius="4"
-                                                        Background="{DynamicResource MaterialDesignPaper}" />
+                                                        Background="{DynamicResource MaterialDesign.Brush.Background}" />
                                                 
                                                 <Grid Width="280" Margin="15,10,15,15">
                                                     <Grid.RowDefinitions>
@@ -109,8 +109,8 @@
                                                             <ToggleButton IsChecked="{Binding HasStar}"
                                                                           materialDesign:ToggleButtonAssist.OnContent="{materialDesign:PackIcon Kind=Star}"
                                                                           Content="{materialDesign:PackIcon Kind=StarOutline}"
-                                                                          Background="{DynamicResource MaterialDesignBackground}"
-                                                                          Foreground="{DynamicResource MaterialDesignBodyLight}"
+                                                                          Background="{DynamicResource MaterialDesign.Brush.Card.Background}"
+                                                                          Foreground="{DynamicResource MaterialDesign.Brush.ForegroundLight}"
                                                                           Style="{StaticResource MaterialDesignActionToggleButton}" />
                                                         </StackPanel>
                                                     </DockPanel>
@@ -144,7 +144,7 @@
                                                 <Setter Property="TextElement.Foreground"
                                                         Value="{DynamicResource PrimaryHueDarkForegroundBrush}" />
                                                 <Setter TargetName="PART_Back" Property="Background"
-                                                        Value="{DynamicResource PrimaryHueMidBrush}" />
+                                                        Value="{DynamicResource MaterialDesign.Brush.Primary}" />
                                                 <Setter TargetName="PART_Back" Property="Opacity" Value="0.8" />
                                             </MultiTrigger>
                                             <MultiTrigger>
@@ -153,7 +153,7 @@
                                                     <Condition Property="IsSelected" Value="true" />
                                                 </MultiTrigger.Conditions>
                                                 <Setter TargetName="PART_Back" Property="Background"
-                                                        Value="{DynamicResource PrimaryHueLightBrush}" />
+                                                        Value="{DynamicResource MaterialDesign.Brush.Primary.Light}" />
                                                 <Setter TargetName="PART_Back" Property="Opacity" Value="0.8" />
                                                 <Setter Property="TextElement.Foreground"
                                                         Value="{DynamicResource PrimaryHueDarkForegroundBrush}" />
@@ -164,7 +164,7 @@
                                                     <Condition Property="IsSelected" Value="false" />
                                                 </MultiTrigger.Conditions>
                                                 <Setter TargetName="PART_Back" Property="Background"
-                                                        Value="{DynamicResource MaterialDesignPaper}" />
+                                                        Value="{DynamicResource MaterialDesign.Brush.Background}" />
                                                 <Setter TargetName="PART_Back" Property="Opacity" Value="1" />
                                             </MultiTrigger>
                                         </ControlTemplate.Triggers>
