--- a/App18.Material/Views/Demo/PageChild3.xaml
+++ b/App18.Material/Views/Demo/PageChild3.xaml
@@ -27,7 +27,8 @@
                       Grid.Row="1">
             <StackPanel>
                 <Grid Height="550">
-                    <Border Background="{DynamicResource MaterialDesignPaper}" Opacity="0.4" CornerRadius="4" />
+                    <Border Background="{DynamicResource MaterialDesign.Brush.Background}" Opacity="0.4"
+                            CornerRadius="4" />
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -51,7 +52,7 @@
                         </DockPanel>
 
                         <Grid Grid.Row="1">
-                            <Border Background="{DynamicResource MaterialDesignPaper}"
+                            <Border Background="{DynamicResource MaterialDesign.Brush.Background}"
                                     Opacity="0.8"
                                     CornerRadius="0,0,4,4" />
 
